...
      items.push(
        {
          name: t('profile'),
          view: 'profile',
          icon: UserIcon,
          onPress: handleGoToProfile,
          testID: 'drawer-profile'
        },
        {
          name: t('settings'),
          view: 'settings',
          icon: SettingsIcon,
          onPress: handleGoToSettings,
...
