appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
- assertVisible: Terms & Privacy
- scrollUntilVisible:
    element: I agree
- tapOn: I agree
- assertVisible: Every language. Every culture.
- tapOn:
    id: onboarding-close-button
- tapOn:
    text: Sign In
    index: -1
- tapOn: Enter your email
- inputText: ${MAESTRO_TEST_EMAIL}
- tapOn: Enter your password
- inputText: ${MAESTRO_TEST_PASSWORD}
- hideKeyboard
- tapOn: Sign In
- assertVisible: My Projects
- tapOn:
    point: 89%,5%
- tapOn: Profile
- assertVisible: Profile
